--- a/code/Style.scss
+++ b/code/Style.scss
@@ -10,6 +10,22 @@
     background-color: black;
 }
 
+WMMRendering {
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+
+    justify-content: center;
+    align-items: center;
+
+    Panel {
+        width: 528px;
+        height: 522px;
+        background: url(ui/cheese_rendering.png);
+        background-size: 528px 522px;
+    }
+}
+
 Slide {
     position: absolute;
 
